chore(deps): update HttpClient usage in ZookeeperContainerTest and align Jackson dependencies